# ololearning-vector

./: CMakeLists.txt  README.md
libololearning/: CMakeLists.txt
libololearning/include/: DenseMatrix.h  DenseVector.h  Student.h  evd.h  math_utils.h
libololearning/src/: Regressor.h  Student.cpp  mainapp.cpp  random.cpp
libololearning/src/la/: DenseMatrix.cpp  DenseVector.cpp  evd.cpp  math_utils.cpp  math_utils.h
test/: CMakeLists.txt  testmatrix.cpp  testsuite.h  testvector.cpp
